--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ button:hover {
 	/* REMOVE OVERFLOW - NO SCROLLING */
 	body {
 		overflow: hidden;
+		background: url("./images/bg-pattern-desktop.svg") no-repeat top left;
 	}
 	/* LOGO */
 	.logo {
@@ -170,7 +171,7 @@ button:hover {
 	}
 	/* CARD */
 	.card {
-		width: 100%;
+		width: 70%;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
@@ -205,7 +206,7 @@ button:hover {
 	/* DISPLAYING DESKTOP HERO IMG */
 	.desktop-hero {
 		display: block;
-		width: 50%;
+		width: 80%;
 		min-height: 100vh;
 		margin-top: -15rem;
 	}
